--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <script src="./etch-a-sketch.js"></script>
     <title>Etch-a-sketch</title>
 </head>
-<body>    
+<body>
+    <div class="shadow">
+        <div id="play-area">
+            <div class="menu left"></div>
+            <div class="text left">Etch-a-sketch</div>
+            <div class="screen"></div>
+            <div class="text right">Etch-a-sketch</div>
+            <div class="menu right"></div>
+        </div>
+    </div>
 </body>
 </html>
