--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <script src="./etch-a-sketch.js"></script>
+    <script src="./etch-a-sketch.js" defer></script>
     <title>Etch-a-sketch</title>
 </head>
 <body>
@@ -14,7 +14,7 @@
             <div class="menu left"></div>
             <div class="text left">Etch-a-sketch</div>
             <div class="screen"></div>
-            <div class="text right">Etch-a-sketch</div>
+            <div class="text right">by <a href="https://github.com/Clonosaurio">Clonosaurio</a></div>
             <div class="menu right"></div>
         </div>
     </div>
