--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <div class="shadow">
         <div id="play-area">
             <div class="menu left"></div>
-            <div class="text left">Etch-a-sketch</div>
+            <div class="text left">Etch - a - sketch</div>
             <div class="screen"></div>
-            <div class="text right">by <a href="https://github.com/Clonosaurio">Clonosaurio</a></div>
+            <div class="text right">by <a href="https://github.com/Clonosaurio" target="_blank">Clonosaurio</a></div>
             <div class="menu right"></div>
         </div>
     </div>
