--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 <body>
     <div class="shadow">
         <div id="play-area">
-            <div class="menu left"></div>
+            <div class="menu left">
+                <button class="reset">RESET</button>
+                <input class="grid-size" value="15" min="1" max="50" type="number">
+            </div>
             <div class="text left">Etch - a - sketch</div>
             <div class="screen"></div>
             <div class="text right">by <a href="https://github.com/Clonosaurio" target="_blank">Clonosaurio</a></div>
