--- a/index.html
+++ b/index.html
@@ -12,13 +12,18 @@
     <div class="shadow">
         <div id="play-area">
             <div class="menu left">
-                <button class="reset">RESET</button>
-                <input class="grid-size" value="15" min="1" max="50" type="number">
+                <button class="pencil">Pencil</button>
+                <button class="rainbow">Rainbow</button>
+                <button class="eraser">Eraser</button>
             </div>
             <div class="text left">Etch - a - sketch</div>
             <div class="screen"></div>
             <div class="text right">by <a href="https://github.com/Clonosaurio" target="_blank">Clonosaurio</a></div>
-            <div class="menu right"></div>
+            <div class="menu right">
+                <button class="reset">RESET</button>
+                <button class="grid">Grid</button>
+                <input class="grid-size" value="15" min="2" max="50" type="number">
+            </div>
         </div>
     </div>
 </body>
