--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
     <div class="shadow">
         <div id="play-area">
             <div class="menu left">
-                <button class="pencil">Pencil</button>
-                <button class="rainbow">Rainbow</button>
-                <button class="eraser">Eraser</button>
+                <button class="pencil">Pencil (place-holder)</button>
+                <button class="rainbow">Rainbow (place-holder)</button>
+                <button class="eraser">Eraser (place-holder)</button>
             </div>
             <div class="text left">Etch - a - sketch</div>
             <div class="screen"></div>
             <div class="text right">by <a href="https://github.com/Clonosaurio" target="_blank">Clonosaurio</a></div>
             <div class="menu right">
-                <button class="reset">RESET</button>
-                <button class="grid">Grid</button>
+                <button class="reset">RESET draw</button>
+                <button class="grid">Toggle grid visibility</button>
                 <input class="grid-size" value="15" min="2" max="50" type="number">
             </div>
         </div>
