eraser now functional, active tool now visible

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     <div class="shadow">
         <div id="play-area">
             <div class="menu left">
-                <button class="pencil">Pencil (place-holder)</button>
+                <button class="pencil">Pencil</button>
+                <button class="eraser">Eraser</button>
+                <button class="color">Color pick (place-holder)</button>
                 <button class="rainbow">Rainbow (place-holder)</button>
-                <button class="eraser">Eraser (place-holder)</button>
             </div>
             <div class="text left">Etch - a - sketch</div>
             <div class="screen"></div>
