--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
             <div class="menu left">
                 <button class="pencil">Pencil</button>
                 <button class="eraser">Eraser</button>
-                <button class="color">Color pick (place-holder)</button>
+                <!-- <button class="color">Color pick (place-holder)</button> -->
+                <div class="color-picker">
+                    <div class="preview"></div>
+                    <div class="rgb">
+                        <input id="r" class="color" step="25" value="0" min="0" max="255" type="number">
+                        <input id="g" class="color" step="25" value="0" min="0" max="255" type="number">
+                        <input id="b" class="color" step="25" value="0" min="0" max="255" type="number">
+                    </div>
+                </div>
                 <button class="rainbow">Rainbow (place-holder)</button>
             </div>
             <div class="text left">Etch - a - sketch</div>
