--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <input id="b" class="color" step="25" value="0" min="0" max="255" type="number">
                     </div>
                 </div>
-                <button class="rainbow">Rainbow (place-holder)</button>
+                <button class="rainbow">Rainbow</button>
             </div>
             <div class="text left">Etch - a - sketch</div>
             <div class="screen"></div>
