--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             <div class="text left">Etch - a - sketch</div>
             <div class="screen"></div>
-            <div class="text right">by <a href="https://github.com/Clonosaurio" target="_blank">Clonosaurio</a></div>
+            <div class="text right">by <a href="https://github.com/HectorVilas" target="_blank">HectorVilas</a></div>
             <div class="menu right">
                 <button class="reset">RESET draw</button>
                 <button class="grid">Toggle grid visibility</button>
